# dbtranslator

./: CMakeLists.txt  README.md
dbtranslator/: CMakeLists.txt
dbtranslator/include/dbtranslator/: Binary.h  CPU.h  Instruction.h  Memory.h
dbtranslator/src/: Binary.cpp  CPU.cpp  Instruction.cpp  Memory.cpp
dbtranslator/tests/: Main.cpp  Memory.ll
dbtranslator/tests/riscv-binaries/fibonacci/: fib-recursion.c  fib-recursion.out  fib-recursion.s
